# spaces-game

./: .gitignore  Cargo.toml  Mermaid  README.md  Trunk.toml  index.html  package-lock.json  package.json  space-game-24b56dede00371f1.js  space-game-24b56dede00371f1_bg.wasm  space-game-26c37a508ae46df2.js  space-game-26c37a508ae46df2_bg.wasm  space-game-9501088633628062.js  space-game-9501088633628062_bg.wasm  space-game-e5db5ec32396be41.js  space-game-e5db5ec32396be41_bg.wasm  spaces-game-148215130203596d.js  spaces-game-148215130203596d_bg.wasm  spaces-game-3d3e322eab673961.js  spaces-game-3d3e322eab673961_bg.wasm  spaces-game-50ea24d9e822c2b7.js  spaces-game-50ea24d9e822c2b7_bg.wasm  spaces-game-7bbeff7f962c9b7.js  spaces-game-7bbeff7f962c9b7_bg.wasm  spaces-game-918abbb21f260f27.js  spaces-game-918abbb21f260f27_bg.wasm  spaces-game-a6bc7c928b5f1db6.js  spaces-game-a6bc7c928b5f1db6_bg.wasm  spaces-game-bb881017f217f2d7.js  spaces-game-bb881017f217f2d7_bg.wasm  spaces-game-c4b66ef8b6e64216.js  spaces-game-c4b66ef8b6e64216_bg.wasm  tailwind-53c923d99602cf26.css  tailwind-9bce67ec803753eb.css  tailwind-d5937ab852214c4c.css
.github/workflows/: deploy.yml
src/: main.rs
src/components/: board.rs  game.rs  game_board.rs  mod.rs  opponent.rs  saved_boards.rs  utils.rs
