[package]
name = "space-game"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7", features = ["csr"] }
web-sys = { version = "0.3", features = ["Storage"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"