[package]
name = "spaces-game"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7.0-rc2", features = ["csr"] }
leptos_meta = { version = "0.7.0-rc2" }
leptos_router = { version = "0.7.0-rc2" }
web-sys = { version = "0.3", features = ["Storage"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.3"

[workspace]
members = ["."]
resolver = "2"
